@@ -759,12 +759,40 @@ class LaunchHandler(object):
         elif hd_startup:
             self.write_startup_sequence(s_dir, hd_startup)
 
+        if "xpkmaster.library" in self.hd_requirements:
+            self.copy_xpkmaster_files(dest_dir)
+
         system_configuration_file = os.path.join(
             devs_dir, "system-configuration"
         )
         if not os.path.exists(system_configuration_file):
             with open(system_configuration_file, "wb") as f:
                 f.write(system_configuration)
+
+    def copy_xpkmaster_files(self, dest_dir):
+        file_map = {
+            "Libs/xpkmaster.library": "5bd19f9503b59c5d19bfe1c6a6e3b6e7c0e9eae2",
+            "Libs/compressors/xpkCBR0.library": "a2a76c10cb06315e51990911fa050669cc89830d",
+            "Libs/compressors/xpkDLTA.library": "ca64f89919c2869cb6fd75346b9a21245a6d04a8",
+            "Libs/compressors/xpkDUKE.library": "8102d77ae0a3d64496436ee56a9c577c84b11992",
+            "Libs/compressors/xpkFAST.library": "4599430f3baa302635a85b26a7b70a4116dc5f09",
+            "Libs/compressors/xpkFRLE.library": "d0746429187ab38e886a47820203315f734e8d89",
+            "Libs/compressors/xpkHFMN.library": "f4a8dbe69e386d87d9ab8cbaf7fc3881b358fdb2",
+            "Libs/compressors/xpkHUFF.library": "f22d099b81d2d039c4fbb3fea47cc9700b01fecf",
+            "Libs/compressors/xpkIMPL.library": "0e00bc18aec757d86f9831131c2236a704c175db",
+            "Libs/compressors/xpkMASH.library": "1093133a17cb635c21c5532ae26ded83b6d359ce",
+            "Libs/compressors/xpkNONE.library": "46dca6e2ff2176f7a12c52ea992a7a49ae5ef269",
+            "Libs/compressors/xpkNUKE.library": "168bee97805be1f85b65f615e6931c4942caf4e4",
+            "Libs/compressors/xpkRAKE.library": "50cd2a19bee1ebd6b54b31c5b9461d5a81a2e910",
+            "Libs/compressors/xpkRLEN.library": "c81cf6d99de56faa6154cc81a9876517c2a8efc0",
+            "Libs/compressors/xpkSHRI.library": "fc96d367e7b3409074841c7f145ab6daef0a6a4d",
+            "Libs/compressors/xpkSMPL.library": "d140b4e87a2ff76cf94616d97fe7b127d128d973",
+            "Libs/compressors/xpkSQSH.library": "2191b616abd4b2fb34c89ae243c35feea2b71104",
+        }
+        for rel_path, sha1 in file_map.items():
+            # file_dest_dir = os.path.join(dest_dir, os.path.dirname(name))
+            # self.install_whdload_file(sha1, file_dest_dir, value)
+            self.install_whdload_file(sha1, dest_dir, rel_path)
 
     def copy_whdload_files(self, dest_dir, s_dir):
         whdload_args = self.config.get("x_whdload_args", "").strip()
