@@ -21,11 +21,11 @@ def default_openretro_server_from_file():
 
 
 def default_openretro_server():
-    return "http://openretro.org"
+    return "https://openretro.org"
 
 
 def fs_uae_url_from_sha1_and_name(sha1, name):
-    return "http://fs-uae.net/s/sha1/{0}/{1}".format(sha1, name)
+    return "https://fs-uae.net/s/sha1/{0}/{1}".format(sha1, name)
 
 
 def openretro_server():
